3b_lab/sao_paulo/sao_paulo_routes.tf
# Explanation: Liberdade knows the way to Shinjuku—Tokyo CIDR routes go through the TGW corridor.
resource "aws_route" "liberdade_to_tokyo_route01" {
  provider               = aws.saopaulo
  route_table_id         = aws_route_table.liberdade_private_rt01.id
  destination_cidr_block = var.tokyo_vpc_cidr
  transit_gateway_id     = aws_ec2_transit_gateway.liberdade_tgw01.id

  depends_on = [aws_ec2_transit_gateway_vpc_attachment.liberdade_attach_sp_vpc01]
}
